# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [3.4.0]
- Add config support for hco to be discoverable as a second hcli at the root (e.g. for AWS Lambda deployment which can't use ports)
- Refactor hcli naming from home to root (root isn't strictly part of the hcli spec)

## [3.3.0]
- Update to huckle version 5.4.0 to allow for HUCKLE_HOME override if needed (e.g. for AWS Lambda deployment)

## [3.2.0]
- Update to latest version of falcon and huckle
- Update email address in pyproject

## [3.1.1]
- Fix to automate credentials file cleanup before publishing

## [3.1.0]
- Add remote authentication support via hco to enable centralized credentials management across HCLI services
- Add lazy hcliapp initialization to avoid creating port unbound resources if they aren't going to be used
- Fix unused returns in authenticator.py
- Fix empty output for hco logging
- Fix error when returning empty list of key via hco key ls
- Fix log output when no default credentials are set in the credentials file
- Fix to remove all outstanding trailing \n in both stdout for hco and stderr problem detail (HCLIErrors)

## [3.0.1]
- Fix missing carriage return when listing keys with hco key ls

## [3.0.0]
- Add HTTP API Problem Details support [RFC9457] per HCLI spec to help with client-side STDERR differentiation
- Update hco to return problem detail errors rather than success messages containing errorlike messages
- Update to a more sensible default configuration (disabled management port and credentials management app)

## [2.1.0]
- Add multiprocess file locking support for credentials file
- Update tests with additional output logs and cleanup

## [2.0.0]
- Add HTTP Basic Authentication support
- Add HCLI Core API Key Authentication (HCOAK) support