@@ -5,8 +5,10 @@ The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
 
 ## [3.4.0]
-- Add config support for hco to be discoverable as a second hcli at the root (e.g. for AWS Lambda deployment which can't use ports)
-- Refactor hcli naming from home to root (root isn't strictly part of the hcli spec)
+- Add root aggregate or management config to allow for hco app override and discovery (e.g. for AWS Lambda deployment which can't use ports)
+- Refactor hcli naming from home to root (the root isn't strictly part of the hcli spec)
+- Update hco key rotation log message for additional clarity
+- Update hcli_core help and README about root override support
 
 ## [3.3.0]
 - Update to huckle version 5.4.0 to allow for HUCKLE_HOME override if needed (e.g. for AWS Lambda deployment)
